# XLM-RoBERTa-train

./: .gitignore  README.md  ai_response.txt  final_output.txt  inference_results.json  main.py  mappings.json  masked_input.txt  mtr_news_data.json  news_data.json  novel_data.json  pyproject.toml  requirements.txt  review_bank_data.json  run_pipeline.py  training_history.json
data/negative_corpus/: railway_news.txt
data/raw/: news_data.json  novel_data.json
final_lora_model/: adapter_config.json
final_lora_model_ver1/: adapter_config.json
models/final_lora_model_news_novel_v1/: README.md  adapter_config.json
script/: fix_config.py  main.py  main_combined.py  merge_model.py  raw.py  raw_presidio.py  run_presidio_custom.py  step2.py  step3.py
script/raw_step/: step1.py
src/: config.py  dataset_builder.py
src/inference/: inference.py  pipeline.py  processor.py  testdata.txt  utils.py
src/training/: clean_and_augment.py  generate_synthetic_data.py  prepare_data.py  process_mtr_news.py  process_news.py  process_novel.py  test_data.json  train_lora.py
src/utils/: bank_loader.py  export_bank_review.py  generators.py  loaders.py  templates.py  tokenizer.py
src/utils/templates/: __init__.py  business.py  general.py  infrastructure.py  logistics.py  negatives.py  orgs.py
train/: create_test_data.py  generate_data.py  inference.py  inference_cpu.py  prepare_data.py  process_mtr_news.py  process_news.py  process_novel.py  test_data.json  train.py  train_lora.py
train/data_utils/: generators.py  loaders.py  templates.py  tokenizer.py
