[project]
name = "massword"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "en-core-web-lg",
    "en-core-web-sm",
    "evaluate>=0.4.6",
    "numpy<2.0.0",
    "peft>=0.18.0",
    "pip>=25.3",
    "presidio-analyzer[transformers]>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "protobuf>=6.33.2",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "spacy==3.7.5",
    "spacy-huggingface-pipelines>=0.0.4",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.30.0,<5.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
